# libelfin

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
dwarf/: abbrev.cc  attrs.cc  cursor.cc  dwarf++.hh  expr.cc  line.cc
elf/: common.hh  data.hh  elf++.hh  mmap_loader.cc
examples/: dump-sections.cc
genUtils/: gen_dwarf_to_string.cc  gen_elf_to_string.cc
